# s2-sdk-python

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml  pytest.ini  release-please-config.json  update_protos  update_specs
.github/workflows/: ci.yml  pr-title.yml  release-please.yml  release.yml  update_protos.yaml
docs/source/: api-reference.md  conf.py  index.md
examples/: append_session.py  append_session_with_auto_batching.py  consumer.py  producer.py  read_session.py
examples/docs/: account_and_basins.py  configuration.py  encryption.py  metrics.py  overview.py  streams.py
examples/streaming/: consumer.py  producer.py
src/s2_sdk/: __init__.py  _append_session.py  _batching.py  _client.py  _compression.py  _encryption.py  _exceptions.py  _mappers.py  _ops.py  _producer.py  _read_session.py  _retrier.py  _types.py  _validators.py
src/s2_sdk/_generated/s2/v1/: s2_pb2.py  s2_pb2.pyi
src/s2_sdk/_s2s/: _append_session.py  _protocol.py  _read_session.py
src/streamstore/: __init__.py  _client.py  _exceptions.py  _mappers.py  _retrier.py  schemas.py  utils.py
src/streamstore/_lib/s2/v1alpha/: __init__.py  s2_pb2.py  s2_pb2.pyi  s2_pb2_grpc.py
tests/: conftest.py  test_account_ops.py  test_account_ops_unit.py  test_basin_ops.py  test_batching.py  test_client.py  test_correctness.py  test_encryption.py  test_read_session.py  test_retrier.py  test_session.py  test_stream_ops.py  test_validators.py
