[project]
name = "streamstore"
version = "3.0.0"
description = "Python SDK for S2, the Stream Store"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio-tools>=1.69.0",
    "grpcio>=1.69.0",
    "types-protobuf>=5.29.1.20241207",
    "grpc-stubs>=1.53.0.5",
    "anyio>=4.8.0",
]

[project.optional-dependencies]
docs = [
    "enum-tools[sphinx]>=0.12.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints>=3.0.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "poethepoet>=0.36.0", "ruff>=0.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src/"]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "dist",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.poe.tasks]
linter = "uv run ruff check --fix"
formatter = "uv run ruff format"
type_checker = "uv run mypy"
checker = ["linter", "formatter", "type_checker"]
