[project]
name = "s2-sdk"
version = "0.0.0"
description = "Python SDK for s2.dev"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "poethepoet>=0.36.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s2_sdk"]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "dist",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.poe.tasks]
linter = "uv run ruff check --fix"
formatter = "uv run ruff format"
ci_linter = "uv run ruff check"
ci_formatter = "uv run ruff format --check"
checker = ["linter", "formatter"]
ci_checker = ["ci_linter", "ci_formatter"]
